; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_kcs_sm.c_restart_kcs_transaction.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_kcs_sm.c_restart_kcs_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.si_sm_data = type { i32, i32, i32, i64, i64, i32, i32 }

@KCS_WAIT_WRITE_START = common dso_local global i32 0, align 4
@IBF_RETRY_TIMEOUT = common dso_local global i32 0, align 4
@OBF_RETRY_TIMEOUT = common dso_local global i32 0, align 4
@KCS_WRITE_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.si_sm_data*)* @restart_kcs_transaction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restart_kcs_transaction(%struct.si_sm_data* %0) #0 {
  %2 = alloca %struct.si_sm_data*, align 8
  store %struct.si_sm_data* %0, %struct.si_sm_data** %2, align 8
  %3 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %4 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %3, i32 0, i32 5
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %7 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %6, i32 0, i32 6
  store i32 %5, i32* %7, align 4
  %8 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %9 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %8, i32 0, i32 4
  store i64 0, i64* %9, align 8
  %10 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %11 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %10, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* @KCS_WAIT_WRITE_START, align 4
  %13 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %14 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 8
  %15 = load i32, i32* @IBF_RETRY_TIMEOUT, align 4
  %16 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %17 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @OBF_RETRY_TIMEOUT, align 4
  %19 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %20 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  %21 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %22 = load i32, i32* @KCS_WRITE_START, align 4
  %23 = call i32 @write_cmd(%struct.si_sm_data* %21, i32 %22)
  ret void
}

declare dso_local i32 @write_cmd(%struct.si_sm_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
